<resources>
    <string name="app_name">Splashy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_new">New</string>
    <string name="nav_featured">Featured</string>
    <string name="nav_collections">Collections</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="dark_theme">Dark Theme</string>

    <string-array name="nav_item_activity_titles">
        <item>New</item>
        <item>Featured</item>
        <item>Collections</item>

    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //Setting
    <string name="load_quality">Load Quality</string>
    <string name="download_quality">Download Quality</string>
    <string name="wallpaper_quality">Wallpaper Quality</string>
    <string name="theme">Theme</string>
    <string name="key_load_quality">key_load_quality</string>
    <string name="key_download_quality">key_download_quality</string>
    <string name="key_wallpaper_quality">key_wallpaper_quality</string>
    <string name="key_theme">key_theme</string>
    <string name="summary_load_quality">Choose the quality of the images that are loaded</string>
    <string name="summary_download_quality">Choose the quality of the images that are downloaded</string>
    <string name="summary_wallpaper_quality">Choose the quality of the wallpaper set</string>
    <string name="summary_theme"></string>
    <string name="image_download">Download</string>
    <string name="image_set_wallpaper">Set Wallpaper</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
