<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_new"
            android:title="@string/nav_new" />
        <item

            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_featured" />
        <item

            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_collection"
            android:title="@string/nav_collections"
            />


    </group>

    <item android:title="Others">
        <menu>
            <item
                android:icon="@drawable/ic_settings"
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings" />
            <item
               android:id="@+id/about_me"
                android:title="@string/nav_about_us"
                android:icon="@drawable/ic_settings"/>

        </menu>
    </item>

</menu>